2008-07-08  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated DESCRIPTION of man page.
	* doc/aria2c.1
	* doc/aria2c.1.html
	* doc/aria2c.1.txt

2008-07-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the compile error on Nexenta OS(GNU/Solaris OS).
	Don't define `struct addrinfo' when __sun is defined.
	* src/getaddrinfo.h 

2008-07-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Introduced a2_struct_stat. It is defined as `struct _stati64' if
	__MINGW32__ is defined, because under MinGW32, _stati64 is used and its
	second argument is of type `struct _stati64'. Otherwise it is defined as
	`struct stat'.
	* src/AbstractDiskWriter.cc
	* src/File.cc
	* src/File.h
	* src/a2io.h
	
2008-07-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the compile error in hurd-i386
	See the original bug report:
	http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=488602
	* src/a2io.h

2008-07-01  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Code cleanup.
	* src/PeerAbstractCommand.cc
	* src/PeerAbstractCommand.h
	
2008-07-01  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Removed TransferEncoding.
	* src/DownloadCommand.cc
	* src/DownloadCommand.h
	* src/HttpResponseCommand.cc
	
2008-07-01  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated po files.
	* po/aria2c.pot
	* po/*.po
	* po/*.gmo

2008-07-01  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Rewritten ChunkedEncoding class as ChunkedDecoder class.
	* src/A2STR.cc
	* src/A2STR.h
	* src/ChunkedDecoder.cc
	* src/ChunkedDecoder.h
	* src/ChunkedEncoding.cc: Removed
	* src/ChunkedEncoding.h: Removed
	* src/DownloadCommand.cc
	* src/DownloadCommand.h
	* src/HttpDownloadCommand.cc
	* src/HttpResponse.cc
	* src/HttpResponse.h
	* src/HttpResponseCommand.cc
	* src/HttpSkipResponseCommand.cc
	* src/HttpSkipResponseCommand.h
	* src/Makefile.am
	* src/TransferEncoding.h: Removed
	* test/ChunkedDecoderTest.cc
	* test/ChunkedEncodingTest.cc: Removed